<?xml version="1.0"?>
<package>
  <name>gazebo_to_ros</name>
  <version>0.0.0</version>
  <description>
	The gazebo_to_ros package
	Convert gazebo topics to ros topics et vice versa
  </description>

  <maintainer email="valentin.vergez@gmail.com">Valentin Vergez</maintainer>

  <license>TODO</license>

  <url type="repository">https://github.com/PyroTeam/robocup-pkg</url>
  <url type="bugtracker">https://github.com/PyroTeam/robocup-pkg/issues</url>
  <url type="website">https://github.com/PyroTeam/robocup-pkg/wiki</url>

  <author email="valentin.vergez@gmail.com">Valentin Vergez</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>trait_im_msg</build_depend>
  <build_depend>deplacement_msg</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gripper_msg</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>trait_im_msg</run_depend>
  <run_depend>deplacement_msg</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gripper_msg</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
